# isosurfaces

./: .gitignore  .hlint.yaml  CHANGELOG.md  LICENSE  README.md  isosurfaces.cabal  isosurfaces.code-workspace  stack.yaml
.github/workflows/: Stack-lts-linux.yml  Stack-lts.yml  Stack-nightly-linux.yml  Stack-nightly.yml
ppm/: .gitignore  makegif.R
src/Colors/: ColorRamp.hs  Palettes.hs
src/OpenGL/: BarthSextic.hs  Goursat.hs  ICN5D.hs  Invader.hs  Mandelbulb.hs  SpiderCage.hs
